<resources>
    <string name="app_name">Just In Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="current_month">Current Month</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="export_sheet">Export Sheet</string>
    <string name="start_time">Start time</string>
    <string name="from_the_past">From the past</string>
    <string name="day">Day</string>
    <string name="end_time">End time</string>
    <string name="save">Save</string>
    <string name="new_log">New Log</string>
    <string name="settings">Settings</string>
    <string name="workload_key">workload_key</string>
    <string name="work_days_key">work_days_key</string>
    <string name="tap_select_days">Tap to select the days</string>
    <string name="dismiss">Dismiss</string>
    <string name="date_pattern">MM/dd/yyyy</string>
    <string name="date_time_pattern">MM/dd/yyyy - HH:mm</string>
    <string name="log_db_node">logs</string>
    <string name="log_saved_successful">Log saved successful</string>
    <string name="normal_work">Normal work</string>
    <string name="extra_work">Extra Work</string>
    <string name="start_time_db_node">startTime_year_month</string>
    <string name="today">Today</string>
    <string name="tap_to_complete">tap to complete</string>
    <string name="type_file_name">Type the file name</string>
    <string name="generate_file">Generate File</string>
    <string name="logs">Logs</string>
    <string name="log_type">Log Type</string>
    <string name="sheet_generated">Sheet Generated</string>
    <string name="my_logs">MyLogs</string>

    <string-array name="workloadArray">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
        <item>13 hours</item>
        <item>14 hours</item>
        <item>15 hours</item>
        <item>16 hours</item>
        <item>17 hours</item>
        <item>18 hours</item>
        <item>19 hours</item>
        <item>20 hours</item>
        <item>21 hours</item>
        <item>22 hours</item>
        <item>23 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="workloadValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="workDaysArray">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="workDaysValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="workDaysValuesDefault">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
